--- a/src/App.css
+++ b/src/App.css
@@ -369,7 +369,7 @@ h5 {
 }
 
 .minw {
-  min-width:150px;
+  min-width:90px;
 }
 
 .pointer {
@@ -1034,6 +1034,14 @@ h5 {
   border-bottom: none;
   border-top: 1px solid black;
   width: 100%;
+  max-width:2480px;
+  overflow:hidden;
+}
+
+.table td{
+  overflow: hidden;
+  width:auto;
+  word-wrap: break-word;
 }
 
 .className_table_first {
