--- a/src/App.css
+++ b/src/App.css
@@ -918,11 +918,10 @@ h5 {
 }
 
 .input-search-pupil {
-  width: 85%;
-  outline: none;
+  /* outline: none;
   border: none;
   margin-left: 10px;
-  background-color: transparent;
+  background-color: transparent; */
 }
 
 .div-menu-home-circle {
@@ -1031,17 +1030,24 @@ h5 {
 }
 
 .div-search {
-  width: 60%;
-  margin-right: 20px;
-  display: inline-block;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  padding-top: 10px;
-  padding-bottom: 7px;
-  padding-left: 10px;
-  border-radius: 20px;
+  display: flex;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  /* padding-top: 10px;
+  padding-bottom: 7px; */
+  justify-content: center;
+  align-content: center;
+  border-radius: 5px;
   margin-bottom: 15px;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
+  margin-right: 20px;
+}
+
+.div-search input {
+  width:100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 5px;
+  border:none;
+  outline: none;
 }
 
 .pupils-list-home {
