--- a/src/App.css
+++ b/src/App.css
@@ -1041,6 +1041,26 @@ h5 {
   margin-right: 20px;
 }
 
+.paiement-categories {
+  background-color: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+}
+
+.paiement-categories-modal {
+  background-color: white;
+  position: fixed;
+  top: 20px;
+  bottom: 35%;
+  left: 25%;
+  right: 25%;
+  border-radius: 7px;
+  overflow-y: auto;
+}
+
 .div-search input {
   width:100%;
   padding-top: 10px;
