--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
-body {
-  /* margin: 0px; */
+@font-face {
+  font-family: "SansSerif";
+  src: local("SansSerif"),
+    url("./../src/assets/fonts/SansSerif.ttf") format("truetype");
+  font-weight: normal;
+}
+
+html {
   font-size: 13px;
 
   -webkit-touch-callout: none;
@@ -15,6 +21,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
@@ -506,15 +513,27 @@ h5 {
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+.border-bottom-smooth {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding-bottom: 10px;
+}
+
 .classes-div {
   transition: 0.6s;
   display: block;
   cursor: pointer;
   padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  /* padding-bottom: -10px; */
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+.border-bottom-classes {
+  display:'inline';
+  padding-top: 15px;
+border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .classes-div:hover {
@@ -1531,4 +1550,25 @@ h5 {
   right:0px;
   background-color: rgba(0, 0, 0, 0.3);
 }
+
+.fiche-employee-pupil td {
+  padding-top:3px;
+  padding-bottom: 3px;
+  padding-left: 0px;
+  text-align: left;
+  /* background-color: aqua; */
+  border:none;
+  }
+
+  /* .fiche-employee-pupil tr {
+    border:none;
+    padding-left: 0px;
+  } */
+  
+  /* .fiche-employee-pupil {
+    margin-left: 0px;
+    background-color: #0a5f54;
+    text-align: left;
+    border:none;
+    } */
 
