--- a/src/App.css
+++ b/src/App.css
@@ -231,16 +231,19 @@ h5 {
   /* height: 70px; */
   /* background-color: green; */
   margin-right: 20px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .user-home {
-  display: inline-block;
+  /* display: inline-block; */
   /* border: 1px solid rgba(0, 0, 0, 0.1); */
   /* height: 40px; */
   background-color: rgba(0, 0, 0, 0.070);
   /* margin-top: 5px; */
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   border-radius: 50%;
   padding-left: 12px;
   padding-right: 12px;
@@ -1689,4 +1692,16 @@ h5 {
   border:1px solid rgb(1, 103, 228);
   background-color: rgb(1, 103, 228);
   color:white;
+}
+
+.hover-tr:hover {
+background-color: rgba(0, 80, 180, 0.4);
+}
+
+.tr-background1 {
+  background-color: rgba(0,0,0,0.020);
+}
+
+.tr-background2 {
+  background-color: rgba(0,0,0,0.080);
 }
