--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @font-face {
   font-family: "SansSerif";
   src: local("SansSerif"),
     url("./../src/assets/fonts/SansSerif.ttf") format("truetype");
   font-weight: normal;
+}
+
+body{
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar {
@@ -35,6 +43,7 @@ html {
   -ms-user-select: none;
   /* -webkit-app-region:drag; */
   user-select: none;
+  background-color: transparent;
 
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
