--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,18 @@
   font-weight: normal;
 }
 
+.bgimagesignin {
+  background-image: url('./assets/logo.PNG');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: contain;
+}
+
+.backdropfilter {
+  /* backdrop-filter: blur(500px); */
+}
+
 body{
   background-color: transparent;
 }
@@ -198,14 +210,12 @@ h5 {
 
 .main-container {
   width: 100%;
-  background-color: white;
   margin: 0px;
   padding: 0px;
 }
 
 .main-menu-left {
   transition: 0.6s;
-  background-color: rgb(245, 245, 245);
   width: 25%;
   position: fixed;
   left: 0px;
@@ -221,12 +231,12 @@ h5 {
 } */
 
 .top-bar-app {
-  background-color: white;
   width: 75%;
   position: fixed;
   left: 25%;
   top: 0px;
-  height: 70px;
+  height: 80px;
+  -webkit-app-region:drag;
 }
 
 .main-middle-page {
@@ -265,7 +275,6 @@ h5 {
 }
 
 .footer-rights {
-  background-color: white;
   width: 75%;
   position: fixed;
   display: flex;
@@ -347,7 +356,7 @@ h5 {
   display: inline-block;
   /* border-right: 1px solid rgba(0, 0, 0, 0.1); */
   /* height: 40px; */
-  background-color: white;
+  /* background-color: white; */
   margin-top: 10px;
   padding-top: 7px;
   padding-left: 5px;
