--- a/src/App.css
+++ b/src/App.css
@@ -224,6 +224,11 @@ h5 {
   overflow-y: auto;
 }
 
+/* .classes-list {
+  overflow-y: auto;
+  background-color: #680006;
+} */
+
 /* .main-menu-left:hover {
   transition: 0.6s;
   width: 30%;
@@ -237,6 +242,10 @@ h5 {
   right: 15px;
   height: 90px;
   -webkit-app-region:drag;
+}
+
+.nodrag {
+  -webkit-app-region: no-drag;
 }
 
 .main-middle-page {
@@ -352,11 +361,16 @@ h5 {
   margin-top: -5px;
 }
 
+.textcenter {
+  text-align: center;
+}
+
 .user-home-tools {
   display: inline-block;
   /* border-right: 1px solid rgba(0, 0, 0, 0.1); */
   /* height: 40px; */
   /* background-color: white; */
+  -webkit-app-region: no-drag;
   margin-top: 10px;
   padding-top: 7px;
   padding-left: 5px;
