--- a/src/App.css
+++ b/src/App.css
@@ -31,13 +31,13 @@ body{
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: transparent;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #888;
-  border-radius: 10px;
+  border-radius: 0px;
 }
 
 /* Handle on hover */
@@ -239,7 +239,7 @@ h5 {
   position: fixed;
   left: 25%;
   top: 0px;
-  right: 15px;
+  right: 0px;
   height: 90px;
   -webkit-app-region:drag;
 }
@@ -253,9 +253,9 @@ h5 {
   width: 75%;
   position: fixed;
   left: 25%;
-  top: 120px;
-  bottom: 30px;
-  margin-top: 110px;
+  top: 91px;
+  bottom: 25px;
+  /* margin-top: 110px; */
   overflow-y: auto;
 }
 
@@ -974,7 +974,7 @@ h5 {
   /* background-color: green; */
   top: 90px;
   bottom: 25px;
-  right: 15px;
+  right: 0px;
   width: 20%;
   /* border-left: 1px solid rgba(0, 0, 0, 0.2); */
   padding-left: 10px;
