--- a/src/App.css
+++ b/src/App.css
@@ -397,7 +397,7 @@ h5 {
   /* height: 40px; */
   /* background-color: white; */
   -webkit-app-region: no-drag;
-  margin-top: 10px;
+  margin-top: 5px;
   padding-top: 7px;
   padding-left: 5px;
   padding-right: 5px;
@@ -1232,7 +1232,6 @@ h5 {
 }
 
 .paiement-categories-modal {
-  background-color: white;
   position: fixed;
   top: 20px;
   bottom: 35%;
@@ -1300,9 +1299,9 @@ h5 {
   display: block;
   padding-left: 12px;
   outline: none;
-  border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   height: 40px;
+  background-color: transparent;
 }
 
 .select-normall {
@@ -1310,8 +1309,7 @@ h5 {
   display: block;
   padding-left: 12px;
   outline: none;
-  background-color: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  background-color: transparent;
   border-radius: 4px;
   height: 40px;
 }
