--- a/src/App.css
+++ b/src/App.css
@@ -866,6 +866,8 @@ h5 {
   text-align: center;
   border: none;
   outline: none;
+  /* cursor: pointer; */
+  background-color: transparent;
 }
 
 .float-menu-right {
@@ -1514,6 +1516,7 @@ h5 {
   text-orientation: mixed;
   writing-mode: sideways-lr;
   text-align: center;
+  outline:none;
   /* align-content: left;
   align-items: flex-start;
   justify-content: flex-start; */
