--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+/* @layer components {
+  .card{
+    @apply shadow-xl rounded-xl;
+  }
+} */
+
 :root {
   --primaryy: transparent;
   --secondaryy: rgb(178, 179, 182);
