--- a/src/App.css
+++ b/src/App.css
@@ -185,6 +185,10 @@ input::-webkit-inner-spin-button {
   border-radius: 5px;
 }
 
+.red {
+  color: red;
+}
+
 .button-primary-small:hover {
   color: white;
   transition: 0.6s;
